--- a/scrapper.ipynb
+++ b/scrapper.ipynb
@@ -187,9 +187,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/50 [00:12<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "NoSuchElementException",
+     "evalue": "Message: no such element: Unable to locate element: {\"method\":\"css selector\",\"selector\":\".logo Ib7Efc\"}\n  (Session info: chrome=114.0.5735.199); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception\nStacktrace:\nBacktrace:\n\tGetHandleVerifier [0x0048A813+48355]\n\t(No symbol) [0x0041C4B1]\n\t(No symbol) [0x00325358]\n\t(No symbol) [0x003509A5]\n\t(No symbol) [0x00350B3B]\n\t(No symbol) [0x0037E232]\n\t(No symbol) [0x0036A784]\n\t(No symbol) [0x0037C922]\n\t(No symbol) [0x0036A536]\n\t(No symbol) [0x003482DC]\n\t(No symbol) [0x003493DD]\n\tGetHandleVerifier [0x006EAABD+2539405]\n\tGetHandleVerifier [0x0072A78F+2800735]\n\tGetHandleVerifier [0x0072456C+2775612]\n\tGetHandleVerifier [0x005151E0+616112]\n\t(No symbol) [0x00425F8C]\n\t(No symbol) [0x00422328]\n\t(No symbol) [0x0042240B]\n\t(No symbol) [0x00414FF7]\n\tBaseThreadInitThunk [0x76E200C9+25]\n\tRtlGetAppContainerNamedObjectPath [0x77977B1E+286]\n\tRtlGetAppContainerNamedObjectPath [0x77977AEE+238]\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNoSuchElementException\u001b[0m                    Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 64\u001b[0m\n\u001b[0;32m     61\u001b[0m     data_\u001b[39m.\u001b[39mappend({\u001b[39m'\u001b[39m\u001b[39mText\u001b[39m\u001b[39m'\u001b[39m: \u001b[39mNone\u001b[39;00m})\n\u001b[0;32m     63\u001b[0m \u001b[39m# Para iterar sobre la misma ventana\u001b[39;00m\n\u001b[1;32m---> 64\u001b[0m google \u001b[39m=\u001b[39m driver\u001b[39m.\u001b[39;49mfind_element(By\u001b[39m.\u001b[39;49mCLASS_NAME, \u001b[39m'\u001b[39;49m\u001b[39mlogo Ib7Efc\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m     65\u001b[0m google\u001b[39m.\u001b[39mclick()\n\u001b[0;32m     67\u001b[0m \u001b[39m# Cerrar el navegador en cada iteración para evitar bloqueos\u001b[39;00m\n\u001b[0;32m     68\u001b[0m \u001b[39m#driver.quit()\u001b[39;00m\n\u001b[0;32m     69\u001b[0m \n\u001b[0;32m     70\u001b[0m \u001b[39m# Rellenar los datos faltantes en data y data_ para tener la misma longitud\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\Javier Peña\\Documents\\BRYAN\\Google_scrapper\\google-scrapper\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:740\u001b[0m, in \u001b[0;36mWebDriver.find_element\u001b[1;34m(self, by, value)\u001b[0m\n\u001b[0;32m    737\u001b[0m     by \u001b[39m=\u001b[39m By\u001b[39m.\u001b[39mCSS_SELECTOR\n\u001b[0;32m    738\u001b[0m     value \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m[name=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mvalue\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m]\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m--> 740\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mexecute(Command\u001b[39m.\u001b[39;49mFIND_ELEMENT, {\u001b[39m\"\u001b[39;49m\u001b[39musing\u001b[39;49m\u001b[39m\"\u001b[39;49m: by, \u001b[39m\"\u001b[39;49m\u001b[39mvalue\u001b[39;49m\u001b[39m\"\u001b[39;49m: value})[\u001b[39m\"\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m\"\u001b[39m]\n",
+      "File \u001b[1;32mc:\\Users\\Javier Peña\\Documents\\BRYAN\\Google_scrapper\\google-scrapper\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:346\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    344\u001b[0m response \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcommand_executor\u001b[39m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    345\u001b[0m \u001b[39mif\u001b[39;00m response:\n\u001b[1;32m--> 346\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49merror_handler\u001b[39m.\u001b[39;49mcheck_response(response)\n\u001b[0;32m    347\u001b[0m     response[\u001b[39m\"\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_unwrap_value(response\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m))\n\u001b[0;32m    348\u001b[0m     \u001b[39mreturn\u001b[39;00m response\n",
+      "File \u001b[1;32mc:\\Users\\Javier Peña\\Documents\\BRYAN\\Google_scrapper\\google-scrapper\\lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:245\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    243\u001b[0m         alert_text \u001b[39m=\u001b[39m value[\u001b[39m\"\u001b[39m\u001b[39malert\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    244\u001b[0m     \u001b[39mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[39m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[1;32m--> 245\u001b[0m \u001b[39mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
+      "\u001b[1;31mNoSuchElementException\u001b[0m: Message: no such element: Unable to locate element: {\"method\":\"css selector\",\"selector\":\".logo Ib7Efc\"}\n  (Session info: chrome=114.0.5735.199); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception\nStacktrace:\nBacktrace:\n\tGetHandleVerifier [0x0048A813+48355]\n\t(No symbol) [0x0041C4B1]\n\t(No symbol) [0x00325358]\n\t(No symbol) [0x003509A5]\n\t(No symbol) [0x00350B3B]\n\t(No symbol) [0x0037E232]\n\t(No symbol) [0x0036A784]\n\t(No symbol) [0x0037C922]\n\t(No symbol) [0x0036A536]\n\t(No symbol) [0x003482DC]\n\t(No symbol) [0x003493DD]\n\tGetHandleVerifier [0x006EAABD+2539405]\n\tGetHandleVerifier [0x0072A78F+2800735]\n\tGetHandleVerifier [0x0072456C+2775612]\n\tGetHandleVerifier [0x005151E0+616112]\n\t(No symbol) [0x00425F8C]\n\t(No symbol) [0x00422328]\n\t(No symbol) [0x0042240B]\n\t(No symbol) [0x00414FF7]\n\tBaseThreadInitThunk [0x76E200C9+25]\n\tRtlGetAppContainerNamedObjectPath [0x77977B1E+286]\n\tRtlGetAppContainerNamedObjectPath [0x77977AEE+238]\n"
+     ]
+    }
+   ],
    "source": [
     "# Se crean listas vacías\n",
     "data_ = []\n",
@@ -254,11 +276,11 @@
     "        data_.append({'Text': None})\n",
     "\n",
     "    # Para iterar sobre la misma ventana\n",
-    "    google = driver.find_element(By.CLASS_NAME, 'logo Ib7Efc')\n",
-    "    google.click()\n",
+    "    #google = driver.find_element(By.CLASS_NAME, 'logo Ib7Efc')\n",
+    "    #google.click()\n",
     "    \n",
     "    # Cerrar el navegador en cada iteración para evitar bloqueos\n",
-    "    #driver.quit()\n",
+    "    driver.quit()\n",
     "\n",
     "    # Rellenar los datos faltantes en data y data_ para tener la misma longitud\n",
     "    max_length = max(len(data), len(data_))\n",
