Se agrega el script de los proxys y un text.ipynb para poder trabajar sobre de esos

--- a/scrapper.ipynb
+++ b/scrapper.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,14 +24,20 @@
     "import time\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
-    "import subprocess"
+    "import subprocess\n",
+    "import random\n",
+    "import requests\n",
+    "import socket\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conexión al navegador"
+    "## Conexión al navegador\n",
+    "\n",
+    "Este espacio se utilza de prueba para la extracción de etiquetas en el s"
    ]
   },
   {
@@ -57,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -118,34 +124,17 @@
        "205       \"MA ISABEL BALDERAS RAMIREZ\""
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "init=200\n",
-    "final=250\n",
-    "\n",
-    "df = pd.read_excel('Z:/Data/HSBC/Asignaciones/ASG_TDC_IA_ENERO_JUNIO.xlsx')\n",
-    "df['Nombre'] = df.Nombre.apply(lambda X: '\"'+X.replace('/', ' ').replace('*', '').rstrip()+'\"')\n",
-    "df_filtered = df['Nombre']\n",
-    "df_filtered.drop_duplicates(inplace=True)\n",
-    "df_input = pd.DataFrame(df_filtered).iloc[init:final]\n",
-    "df_input.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "init=200\n",
     "final=1000\n",
     "\n",
     "df = pd.read_excel('Z:/Data/HSBC/Asignaciones/ASG_TDC_IA_ENERO_JUNIO.xlsx')\n",
-    "df['Nombre'] = df.Nombre.apply(lambda X: X.replace('/', ' ').replace('*', '').rstrip())\n",
+    "df['Nombre'] = df.Nombre.apply(lambda X: '\"'+X.replace('/', ' ').replace('*', '').rstrip()+'\"')\n",
     "df_filtered = df['Nombre']\n",
     "df_filtered.drop_duplicates(inplace=True)\n",
     "df_input = pd.DataFrame(df_filtered).iloc[init:final]\n",
@@ -168,23 +157,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/800 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'http': 'http://http://162.223.94.164:80'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 1/800 [00:10<2:22:36, 10.71s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'http': 'http://http://130.61.49.108:3128'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 2/800 [00:20<2:17:23, 10.33s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'http': 'http://http://155.94.241.132:3128'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 2/800 [00:23<2:35:05, 11.66s/it]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 23\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[39m# Configurar la solicitud con el proxy seleccionado\u001b[39;00m\n\u001b[0;32m     21\u001b[0m response \u001b[39m=\u001b[39m requests\u001b[39m.\u001b[39mget(start_url, proxies\u001b[39m=\u001b[39mproxy)\n\u001b[1;32m---> 23\u001b[0m time\u001b[39m.\u001b[39;49msleep(\u001b[39m2\u001b[39;49m)\n\u001b[0;32m     25\u001b[0m driver \u001b[39m=\u001b[39m webdriver\u001b[39m.\u001b[39mChrome(options\u001b[39m=\u001b[39mchrome_options)\n\u001b[0;32m     26\u001b[0m driver\u001b[39m.\u001b[39mget(start_url)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "\n",
     "data_ = []\n",
     "data = []\n",
     "nombres = []\n",
     "\n",
+    "start_url = 'https://google.com'\n",
+    "# Cargar la lista de proxies desde el archivo\n",
+    "with open ('proxies.csv', 'r') as file :\n",
+    "    proxies_list = file.read().splitlines()\n",
+    "    \n",
+    "\n",
     "\n",
     "for i in tqdm(df_input['Nombre']):\n",
     "    \n",
+    "    # Opciones del controlador para google.com\n",
     "    chrome_options = Options()\n",
+    "    \n",
+    "    # Elegir una dirección de proxy aleatoria de la lista para cada solicitud\n",
+    "    proxy = {'http': f'http://{random.choice(proxies_list)}'}\n",
+    "    print(proxy)\n",
+    "    # Configurar la solicitud con el proxy seleccionado\n",
+    "    response = requests.get(start_url, proxies=proxy)\n",
+    "    \n",
+    "    time.sleep(2)\n",
+    "\n",
     "    driver = webdriver.Chrome(options=chrome_options)\n",
-    "    start_url = 'https://google.com'\n",
     "    driver.get(start_url)\n",
     "    \n",
+    "    # Acción de búsqueda en el input \n",
     "    nombres.append(i)\n",
     "    wait = WebDriverWait(driver, 100000)\n",
     "    nombre = wait.until(EC.presence_of_element_located((By.CLASS_NAME, 'gLFyf')))\n",
@@ -248,7 +314,9 @@
     "\n",
     "df_3 = pd.concat([df, df_2], axis=1)\n",
     "df_3.dropna(inplace=True)\n",
-    "df_3 = df_3[df_3['href'].str.contains('facebook|twitter|instagram|linkedin|misprofesores|.org|tiktok', case=False)]\n",
+    "# Filtrado por tipo de página encontrada\n",
+    "# df_3 = df_3[df_3['href'].str.contains('facebook|twitter|instagram|linkedin|misprofesores|.org|tiktok', case=False)]\n",
+    "# Se quitan enlaces para traducir páginas\n",
     "df_3 = df_3[~df_3['href'].str.contains('translate.google')]\n",
     "\n",
     "\n",
